# mlops-zoomcamp-1

./: .gitignore  README.md  diff  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
01-intro/: homework.ipynb
02-experiment-tracking/given/: hpo.py  preprocess_data.py  register_model.py  self_hpo.py  train.py
03-orchestration/: hello_world.py  hw.py  prefect_base_dockerfile
03-orchestration/default_repo/: metadata.yaml
03-orchestration/default_repo/custom/: train.py
03-orchestration/default_repo/data_loaders/: yellow_taxi_2023_march.py
03-orchestration/default_repo/pipelines/q3/: metadata.yaml
03-orchestration/default_repo/transformers/: data_prep.py
03-orchestration/mage_data/default_repo/: mage-ai.db
03-orchestration/mage_data/default_repo/.operation_history/: 2025-05-20
03-orchestration/mage_data/default_repo/pipelines/q3/.variables/data_prep/output_0/: data_column_types.json  resource_usage.json  sample_data.parquet  statistics.json
03-orchestration/mage_data/default_repo/pipelines/q3/.variables/train/output_0/: resource_usage.json
03-orchestration/mage_data/default_repo/pipelines/q3/.variables/yellow_taxi_2023_march/output_0/: data_column_types.json  sample_data.parquet  statistics.json
03-orchestration/prefect/: README.md  force_out_of_memory.py  hello_world.py
04-deployment/given/: starter.ipynb
05-monitoring/: trail_run.ipynb
07-project/: aws_setup.sh  eda.ipynb
infra/: README.md  docker-compose.yml  env.sh
infra/evidently/: Dockerfile
infra/mlflow/: Dockerfile
infra/prefect/: Dockerfile
mlflow/: Dockerfile  recreate.sh  run.sh
o1-intro/: homework.ipynb
