[project]
name = "zoomcamp"
version = "0.1.0"
description = "Building Machine Learning Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscurl>=0.36",
    "boto3>=1.36.25",
    "click>=8.1.8",
    "geventhttpclient>=2.3.3",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "scikit-learn==1.4.2", # looks like the project needs this for mean_squared_error(..., ..., squared=False)
    "notebook>=7.0.0",
    "pyarrow==19.0.0",
    "pipdeptree>=2.17.0",

    # for hw2
    "awscurl==0.36",
    "fqdn==1.5.1",
    "isoduration==20.11.0",
    "jsonpointer==3.0.0",
    "tinycss2==1.4.0",
    "uri-template==1.3.0",
    "webcolors==24.11.1",
    "hyperopt==0.2.7",
    "mlflow==2.20.4",
]