[project]
name = "zoomcamp"
version = "0.1.0"
description = "Building Machine Learning Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "notebook>=7.0.0",
    
    "pipdeptree>=2.17.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",

    # for hw2
    "awscurl==0.36",
    "fqdn==1.5.1",
    "isoduration==20.11.0",
    "jsonpointer==3.0.0",
    "tinycss2==1.4.0",
    "uri-template==1.3.0",
    "webcolors==24.11.1",
    "hyperopt==0.2.7",
    "click>=8.1.8",

    # for hw3
    "prefect==3.4.0",
    "prefect-docker==0.6.5",

    # for project
    "openpyxl==3.1.5",
    "matplotlib==3.9.2",
]

[dependency-groups]
prod = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn==1.4.2", # looks like the project needs this for mean_squared_error(..., ..., squared=False)
    "mlflow==2.20.4",
    "pyarrow==19.0.0",

    # for hw 5
    "evidently==0.7.7",
]